style: Add container marign

--- a/style.css
+++ b/style.css
@@ -102,6 +102,7 @@ body {
 }
 
 .container {
+  margin: 5em 2em;
   font-size: var(--fs-body);
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
